--- a/min/nl/historiek.html
+++ b/min/nl/historiek.html
@@ -42,13 +42,13 @@
             <a href="#!" class="brand-logo"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="sass.html">Home</a></li>
-                <li><a href="badges.html">OP=OP</a></li>
-                <li><a href="collapsible.html">Activiteiten</a></li>
-                <li><a href="sass.html">Sponsors</a></li>
-                <li><a href="badges.html">Partners</a></li>
-                <li><a href="sass.html">Historiek</a></li>
-                <li><a href="badges.html">Doneren?</a></li>
+                <li><a href="../nl/home.html">Home</a></li>
+                <li><a href="../nl/op=op.html">OP=OP</a></li>
+                <li><a href="../nl/activiteiten.html">Activiteiten</a></li>
+                <li><a href="../nl/sponsors.html">Sponsors</a></li>
+                <li><a href="../nl/partners_armoedebeleid.html">Partners</a></li>
+                <li><a href="../nl/historiek.html">Historiek</a></li>
+                <li><a href="../nl/ookdoneren.html">Doneren?</a></li>
                 <!-- Dropdown Trigger -->
                 <li><a class="dropdown-trigger" href="#!" data-target="dropdown2">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
             </ul>
@@ -60,13 +60,13 @@
     <div class="txt">
 
         <ul class="sidenav" id="mobile-demo">
-            <li><a href="sass.html">Home</a></li>
-            <li><a href="badges.html">OP=OP</a></li>
-            <li><a href="collapsible.html">Activiteiten</a></li>
-            <li><a href="sass.html">Sponsors</a></li>
-            <li><a href="badges.html">Partners</a></li>
-            <li><a href="sass.html">Historiek</a></li>
-            <li><a href="badges.html">Doneren?</a></li>
+            <li><a href="../nl/home.html">Home</a></li>
+                <li><a href="../nl/op=op.html">OP=OP</a></li>
+                <li><a href="../nl/activiteiten.html">Activiteiten</a></li>
+                <li><a href="../nl/sponsors.html">Sponsors</a></li>
+                <li><a href="../nl/partners_armoedebeleid.html">Partners</a></li>
+                <li><a href="../nl/historiek.html">Historiek</a></li>
+                <li><a href="../nl/ookdoneren.html">Doneren?</a></li>
             <!-- Dropdown Trigger -->
             <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
