kleur aangepast, titels aangepast, auteurs bijgevoegd, favicons aangebracht

--- a/min/index.html
+++ b/min/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>MIN | Kies je taal</title>
+    <meta name="author" content="co-authored door Arne Sas, Arne Van Beethoven, Arne De Cnodder en Gillian Heyns">
+    <meta name="description" content="MIN. Mensen in nood.  MIN is best te vergelijken met de spoeddienst in het ziekenhuis. De mensen die totaal verdwaald zijn in de mallemolen van  het leven en zich even niet alleen meer kunnen redden zijn bij ons welkom voor hulp.">
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,7 +24,7 @@
         <div class="titel">
 
             <h3 class="">Welkom bij</h3>
-          <a href="#"><img src="img/logo_min_klein.svg" alt="logo min"></a>
+            <a href="#"><img src="img/logo_min_klein.svg" alt="logo min"></a>
 
         </div>
         <div class="talen">
