--- a/min/nl/home.html
+++ b/min/nl/home.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home | MIN</title>
+    <meta name="author" content="co-authored door Arne Sas, Arne Van Beethoven, Arne De Cnodder en Gillian Heyns">
     <link rel="icon" type="image/png" href="../img/favicon-32x32.png">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -38,7 +39,7 @@
         <li><a href="#!">Arabisch</a></li>
 
     </ul>
-    <nav class="blue">
+    <nav class="ccakleur">
         <div class="nav-wrapper">
             <a href="#!" class="brand-logo"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -62,12 +63,12 @@
 
         <ul class="sidenav" id="mobile-demo">
             <li><a href="../nl/home.html">Home</a></li>
-                <li><a href="../nl/op=op.html">OP=OP</a></li>
-                <li><a href="../nl/activiteiten.html">Activiteiten</a></li>
-                <li><a href="../nl/sponsors.html">Sponsors</a></li>
-                <li><a href="../nl/partners_armoedebeleid.html">Partners</a></li>
-                <li><a href="../nl/historiek.html">Historiek</a></li>
-                <li><a href="../nl/ookdoneren.html">Doneren?</a></li>
+            <li><a href="../nl/op=op.html">OP=OP</a></li>
+            <li><a href="../nl/activiteiten.html">Activiteiten</a></li>
+            <li><a href="../nl/sponsors.html">Sponsors</a></li>
+            <li><a href="../nl/partners_armoedebeleid.html">Partners</a></li>
+            <li><a href="../nl/historiek.html">Historiek</a></li>
+            <li><a href="../nl/ookdoneren.html">Doneren?</a></li>
             <!-- Dropdown Trigger -->
             <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
@@ -126,7 +127,7 @@
                     2400 Mol</p>
                 <hr>
                 <p>Voedselbedeling – noodhulp op zaterdag : <br> St Apollonialaan 198 </p>
-                   <a href="https://welzijnsschakels.be/"><img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px"></a>
+                <a href="https://welzijnsschakels.be/"><img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px"></a>
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
 
@@ -158,5 +159,8 @@
             $('.sidenav').sidenav();
             $(".dropdown-trigger").dropdown();
         });
+
     </script>
-</body></html>
+</body>
+
+</html>
