--- a/min/nl/partners_armoedebeleid.html
+++ b/min/nl/partners_armoedebeleid.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Onze activiteiten</title>
+    <title>Onze partners | MIN</title>
+    <meta name="author" content="co-authored door Arne Sas, Arne Van Beethoven, Arne De Cnodder en Gillian Heyns">
     <link rel="icon" type="image/png" href="../img/favicon-32x32.png">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -38,7 +39,7 @@
         <li><a href="#!">Arabisch</a></li>
 
     </ul>
-    <nav class="blue">
+    <nav class="ccakleur">
         <div class="nav-wrapper">
             <a href="../nl/home.html" class="brand-logo"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -62,12 +63,12 @@
 
         <ul class="sidenav" id="mobile-demo">
             <li><a href="../nl/home.html">Home</a></li>
-                <li><a href="../nl/op=op.html">OP=OP</a></li>
-                <li><a href="../nl/activiteiten.html">Activiteiten</a></li>
-                <li><a href="../nl/sponsors.html">Sponsors</a></li>
-                <li><a href="../nl/partners_armoedebeleid.html">Partners</a></li>
-                <li><a href="../nl/historiek.html">Historiek</a></li>
-                <li><a href="../nl/ookdoneren.html">Doneren?</a></li>
+            <li><a href="../nl/op=op.html">OP=OP</a></li>
+            <li><a href="../nl/activiteiten.html">Activiteiten</a></li>
+            <li><a href="../nl/sponsors.html">Sponsors</a></li>
+            <li><a href="../nl/partners_armoedebeleid.html">Partners</a></li>
+            <li><a href="../nl/historiek.html">Historiek</a></li>
+            <li><a href="../nl/ookdoneren.html">Doneren?</a></li>
             <!-- Dropdown Trigger -->
             <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
@@ -79,12 +80,12 @@
                 <div class="col s12 l6">
                     <p>Vzw MIN Mol voor donaties van kleding en huisraad en speelgoed (kerk Achterbos)</p>
                     <p>Gsm : 0468 58 51 39 <br>
-                    Email : min.mol@telenet.be</p>
+                        Email : min.mol@telenet.be</p>
                     <p>Onze doelgroep wordt regelmatig uitgenodigd door vzw-Min Mol om spulletjes uit te zoeken.</p>
                     <p>Ons huis Mol (https://onshuismol.be/)</p>
                     <p>Bresserdijk 4 - 2400Mol <br>
-                    014 32 04 83 <br>
-                    vierdewereldwerking-mol@skynet.be</p>
+                        014 32 04 83 <br>
+                        vierdewereldwerking-mol@skynet.be</p>
                 </div>
                 <div class="col s12 l6">
                     <img src="../img/vzwmenseninnood.jpg" alt="logo vzw mensen in nood" width="400px" height="200px">
@@ -151,5 +152,8 @@
             $('.sidenav').sidenav();
             $(".dropdown-trigger").dropdown();
         });
+
     </script>
-</body></html>
+</body>
+
+</html>
