--- a/min/nl/sponsors.html
+++ b/min/nl/sponsors.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Onze sponsors | MIN</title>
+    <meta name="author" content="co-authored door Arne Sas, Arne Van Beethoven, Arne De Cnodder en Gillian Heyns">
+    <link rel="icon" type="image/png" href="../img/favicon-32x32.png">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -37,18 +39,18 @@
         <li><a href="#!">Arabisch</a></li>
 
     </ul>
-    <nav class="blue">
+    <nav class="ccakleur">
         <div class="nav-wrapper">
             <a href="#!" class="brand-logo"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="sass.html">Home</a></li>
-                <li><a href="badges.html">OP=OP</a></li>
-                <li><a href="collapsible.html">Activiteiten</a></li>
-                <li><a href="sass.html">Sponsors</a></li>
-                <li><a href="badges.html">Partners</a></li>
-                <li><a href="sass.html">Historiek</a></li>
-                <li><a href="badges.html">Doneren?</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="op=op.html">OP=OP</a></li>
+                <li><a href="activiteiten.html">Activiteiten</a></li>
+                <li><a href="sponsors.html">Sponsors</a></li>
+                <li><a href="partners_armoedebeleid.html">Partners</a></li>
+                <li><a href="historiek.html">Historiek</a></li>
+                <li><a href="ookdoneren.html">Doneren?</a></li>
                 <!-- Dropdown Trigger -->
                 <li><a class="dropdown-trigger" href="#!" data-target="dropdown2">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
             </ul>
@@ -59,13 +61,13 @@
 
 
     <ul class="sidenav" id="mobile-demo">
-        <li><a href="sass.html">Home</a></li>
-        <li><a href="badges.html">OP=OP</a></li>
-        <li><a href="collapsible.html">Activiteiten</a></li>
-        <li><a href="sass.html">Sponsors</a></li>
-        <li><a href="badges.html">Partners</a></li>
-        <li><a href="sass.html">Historiek</a></li>
-        <li><a href="badges.html">Doneren?</a></li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="op=op.html">OP=OP</a></li>
+        <li><a href="activiteiten.html">Activiteiten</a></li>
+        <li><a href="sponsors.html">Sponsors</a></li>
+        <li><a href="partners_armoedebeleid.html">Partners</a></li>
+        <li><a href="historiek.html">Historiek</a></li>
+        <li><a href="ookdoneren.html">Doneren?</a></li>
         <!-- Dropdown Trigger -->
         <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
     </ul>
