welkom bij index pagina weg en probleem bij doneren

--- a/min/nl/ookdoneren.html
+++ b/min/nl/ookdoneren.html
@@ -157,7 +157,18 @@
         </div>
 
     </footer>
+ <script type="text/javascript" src="../js/materialize.min.js"></script>
 
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+    <script src="../js/materialize.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('.sidenav').sidenav();
+            $(".dropdown-trigger").dropdown();
+        });
+
+    </script>
 </body>
 
 </html>
