--- a/min/nl/sponsors.html
+++ b/min/nl/sponsors.html
@@ -223,7 +223,7 @@
 
     </div>
 
-    <footer class="footer center-align">
+  <footer class="footer center-align">
         <div class="row center-align">
             <div class="col s12 l4">
                 <h4>contactgegevens </h4>
@@ -236,7 +236,8 @@
                 <hr>
                 <p>bankrekening <br>
                     BE29 7512 0621 4764 <br>
-                    BIC: AXABBE22
+                    BIC: AXABBE22 <br>
+                    Ondernemingsnummer : 0639.984.323
                 </p>
             </div>
             <div class="col s12 l4">
@@ -246,6 +247,7 @@
                     2400 Mol</p>
                 <hr>
                 <p>Voedselbedeling – noodhulp op zaterdag : <br> St Apollonialaan 198 </p>
+                <img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px">
                 <br>
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
@@ -265,6 +267,7 @@
 
             </div>
         </div>
+
     </footer>
     <!--JavaScript at end of body for optimized loading-->
 
