--- a/min/nl/op=op.html
+++ b/min/nl/op=op.html
@@ -135,10 +135,10 @@
 
         </div>
     </div>
-    <footer class="footer center-align">
+ <footer class="footer center-align">
         <div class="row center-align">
             <div class="col s12 l4">
-                <h5>contactgegevens </h5>
+                <h4>contactgegevens </h4>
 
                 <p>Algemene info/nieuwe aanvragen <br> Gsm: 0473 /24 13 61 </p>
                 <hr>
@@ -153,13 +153,13 @@
                 </p>
             </div>
             <div class="col s12 l4">
-                <h5>adressen</h5>
+                <h4>adressen</h4>
                 <p>Maatschappelijke zetel <br>
                     Bresserdijk 4 <br>
                     2400 Mol</p>
                 <hr>
                 <p>Voedselbedeling – noodhulp op zaterdag : <br> St Apollonialaan 198 </p>
-                <a href="https://welzijnsschakels.be/"><img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px"></a>
+                <img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px">
                 <br>
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
@@ -179,6 +179,7 @@
 
             </div>
         </div>
+
     </footer>
     <!--JavaScript at end of body for optimized loading-->
 
