--- a/min/nl/ookdoneren.html
+++ b/min/nl/ookdoneren.html
@@ -157,7 +157,7 @@
         </div>
 
     </footer>
- <script type="text/javascript" src="../js/materialize.min.js"></script>
+ <script src="../js/materialize.min.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
