achtergrond van h1 verandert

--- a/min/nl/home.html
+++ b/min/nl/home.html
@@ -72,10 +72,17 @@
             <!-- Dropdown Trigger -->
             <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
-
+        <h1 class="center" id="homebg">Home</h1>
         <div class="container">
+            <div class="hulp">
+                <img src="../img/actie_min_broodniethoog.jpg" class="responsive-img" alt="">
+                <div>
+                    <div class="centered" id="knop">
+                        <h4><a href="">Hulp nodig?</a></h4>
+                    </div>
+                </div>
+            </div>
 
-            <h1 class="center">Home</h1>
             <p id="opening" class="para">Actie mensen in nood is een organisatie die mensen in armoede nabij is.We proberen mee te zoeken naar oplossingen of verwijzen naar de instanties die verder kunnen helpen. <br>Actief in: Mol, Balen, Dessel, Retie</p>
 
             <div class="row">
@@ -106,7 +113,7 @@
     <footer class="footer center-align">
         <div class="row center-align">
             <div class="col s12 l4">
-                <h4>contactgegevens </h4>
+                <h4>Contactgegevens </h4>
 
                 <p>Algemene info/nieuwe aanvragen <br> Gsm: 0473 /24 13 61 </p>
                 <hr>
@@ -114,14 +121,14 @@
                 <hr>
                 <p>Email: <a href="mailto: actiemenseninood@gmail.com">actiemenseninood@gmail.com</a></p>
                 <hr>
-                <p>bankrekening <br>
+                <p>Bankrekening <br>
                     BE29 7512 0621 4764 <br>
                     BIC: AXABBE22 <br>
                     Ondernemingsnummer : 0639.984.323
                 </p>
             </div>
             <div class="col s12 l4">
-                <h4>adressen</h4>
+                <h4>Adressen</h4>
                 <p>Maatschappelijke zetel <br>
                     Bresserdijk 4 <br>
                     2400 Mol</p>
@@ -159,8 +166,5 @@
             $('.sidenav').sidenav();
             $(".dropdown-trigger").dropdown();
         });
-
     </script>
-</body>
-
-</html>
+</body></html>
