Navbar aangepast, code meer valide gemaakt

--- a/min/nl/home.html
+++ b/min/nl/home.html
@@ -19,26 +19,6 @@
 </head>
 
 <body>
-    <!-- Dropdown Structure -->
-    <ul id="dropdown1" class="dropdown-content">
-        <li><a href="#!">Nederlands</a></li>
-        <li class="divider"></li>
-        <li><a href="#!">Frans</a></li>
-        <li><a href="#!">Engels</a></li>
-        <li><a href="#!">Russisch</a></li>
-        <li><a href="#!">Arabisch</a></li>
-
-    </ul>
-    <ul id="dropdown2" class="dropdown-content">
-        <li><a href="#">Taal</a></li>
-        <li class="divider"></li>
-        <li><a href="#!">Nederlands</a></li>
-        <li><a href="#!">Frans</a></li>
-        <li><a href="#!">Engels</a></li>
-        <li><a href="#!">Russisch</a></li>
-        <li><a href="#!">Arabisch</a></li>
-
-    </ul>
     <nav class="ccakleur">
         <div class="nav-wrapper">
             <a href="#!" class="brand-logo"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
@@ -51,8 +31,6 @@
                 <li><a href="../nl/partners_armoedebeleid.html">Partners</a></li>
                 <li><a href="../nl/historiek.html">Historiek</a></li>
                 <li><a href="../nl/ookdoneren.html">Doneren?</a></li>
-                <!-- Dropdown Trigger -->
-                <li><a class="dropdown-trigger" href="#!" data-target="dropdown2">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
             </ul>
         </div>
 
@@ -69,8 +47,6 @@
             <li><a href="../nl/partners_armoedebeleid.html">Partners</a></li>
             <li><a href="../nl/historiek.html">Historiek</a></li>
             <li><a href="../nl/ookdoneren.html">Doneren?</a></li>
-            <!-- Dropdown Trigger -->
-            <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
 
         <div class="container">
@@ -103,7 +79,7 @@
             </div>
         </div>
     </div>
-   <footer class="footer center-align">
+    <footer class="footer center-align">
         <div class="row center-align">
             <div class="col s12 l4">
                 <h4>contactgegevens </h4>
@@ -161,8 +137,5 @@
             $('.sidenav').sidenav();
             $(".dropdown-trigger").dropdown();
         });
-
     </script>
-</body>
-
-</html>
+</body></html>
