--- a/min/nl/ookdoneren.html
+++ b/min/nl/ookdoneren.html
@@ -19,26 +19,6 @@
 </head>
 
 <body>
-    <!-- Dropdown Structure -->
-    <ul id="dropdown1" class="dropdown-content">
-        <li><a href="#!">Nederlands</a></li>
-        <li class="divider"></li>
-        <li><a href="#!">Frans</a></li>
-        <li><a href="#!">Engels</a></li>
-        <li><a href="#!">Russisch</a></li>
-        <li><a href="#!">Arabisch</a></li>
-
-    </ul>
-    <ul id="dropdown2" class="dropdown-content">
-        <li><a href="#">Selecteer je taal</a></li>
-        <li class="divider"></li>
-        <li><a href="#!">Nederlands</a></li>
-        <li><a href="#!">Frans</a></li>
-        <li><a href="#!">Engels</a></li>
-        <li><a href="#!">Russisch</a></li>
-        <li><a href="#!">Arabisch</a></li>
-
-    </ul>
     <nav class="ccakleur">
         <div class="nav-wrapper">
             <a href="#!" class="brand-logo"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
@@ -51,8 +31,6 @@
                 <li><a href="../nl/partners_armoedebeleid.html">Partners</a></li>
                 <li><a href="../nl/historiek.html">Historiek</a></li>
                 <li><a href="../nl/ookdoneren.html">Doneren?</a></li>
-                <!-- Dropdown Trigger -->
-                <li><a class="dropdown-trigger" href="#!" data-target="dropdown2">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
             </ul>
         </div>
     </nav>
@@ -68,8 +46,6 @@
             <li><a href="../nl/partners_armoedebeleid.html">Partners</a></li>
             <li><a href="../nl/historiek.html">Historiek</a></li>
             <li><a href="../nl/ookdoneren.html">Doneren?</a></li>
-            <!-- Dropdown Trigger -->
-            <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
 
 
@@ -135,7 +111,7 @@
                     2400 Mol</p>
                 <hr>
                 <p>Voedselbedeling – noodhulp op zaterdag : <br> St Apollonialaan 198 </p>
-                <img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px">
+                <img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100" width="200">
                 <br>
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
@@ -157,7 +133,7 @@
         </div>
 
     </footer>
- <script src="../js/materialize.min.js"></script>
+    <script src="../js/materialize.min.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
@@ -167,8 +143,5 @@
             $('.sidenav').sidenav();
             $(".dropdown-trigger").dropdown();
         });
-
     </script>
-</body>
-
-</html>
+</body></html>
