back to top in pagina's nog op juiste plaatst te zetten

--- a/min/nl/home.html
+++ b/min/nl/home.html
@@ -99,6 +99,7 @@
                     <h4 class="center">Hoe gaan we te werk</h4>
                     <p>Actie MIN is best te vergelijken met de spoeddienst in het ziekenhuis. De mensen die totaal verdwaald zijn in de mallemolen vanhet leven en zich even niet alleen meer kunnen redden, zijn bij ons welkom voor hulp. Na de eerste zorgen gaan we samen met hen bekijken wat de volgende stappen kunnen zijn naar het herstel van hun situatie. Dan verwijzen we naarandere organisaties zoalshet OCMW, CAW of JAC of zoeken naarandere mogelijkheden om uit het dal te geraken.</p>
                 </div>
+                <a href="#"><img id="naarboven" src="../img/backtotop.png" alt="Naar boven" width="50px" height="50px"></a>
             </div>
         </div>
     </div>
