--- a/min/nl/partners_armoedebeleid.html
+++ b/min/nl/partners_armoedebeleid.html
@@ -89,6 +89,7 @@
                 <div class="col s12 l6">
                     <img src="../img/vzwmenseninnood.jpg" alt="logo vzw mensen in nood" width="400px" height="200px">
                 </div>
+                <a href="#"><img id="naarboven" src="../img/backtotop.png" alt="Naar boven" width="50px" height="50px"></a>
             </div>
 
         </div>
