--- a/min/nl/op=op.html
+++ b/min/nl/op=op.html
@@ -131,8 +131,9 @@
                     een lidkaart met vervaldag. Zo’n lidkaart is gratis. We vragen 2 € voor de
                     zaterdagbedeling om onze werkingskosten te dekken.
                 </p>
-
+<a href="#"><img id="naarboven" src="../img/backtotop.png" alt="Naar boven" width="50px" height="50px"></a>
             </div>
+            
         </div>
     </div>
     <footer class="footer center-align">
