webbureau dingen aangepast

--- a/webbureau/index.html
+++ b/webbureau/index.html
@@ -20,27 +20,27 @@
 
 <body>
 
-        <nav class="white" role="navigation">
-            <div class="nav-wrapper container">
-                <a id="logo-container" href="#" class="brand-logo">
-                    <img id="logo" src="img/logo_gnadesign_klein.svg" alt="logo gna design">
-                </a>
-                <ul class="right hide-on-med-and-down ">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#developers">Developers</a></li>
-                    <li><a href="#waar">Waar?</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-        
-                <ul id="nav-mobile" class="sidenav">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#developers">Developers</a></li>
-                    <li><a href="#waar">Waar?</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-            </div>
-        </nav>
+    <nav class="white" role="navigation">
+        <div class="nav-wrapper container">
+            <a id="logo-container" href="#" class="brand-logo">
+                <img id="logo" src="img/logo_gnadesign_klein.svg" alt="logo gna design">
+            </a>
+            <ul class="right hide-on-med-and-down ">
+                <li><a href="#">Home</a></li>
+                <li><a href="#developers">Developers</a></li>
+                <li><a href="#waar">Waar?</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+
+            <ul id="nav-mobile" class="sidenav">
+                <li><a href="#">Home</a></li>
+                <li><a href="#developers">Developers</a></li>
+                <li><a href="#waar">Waar?</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        </div>
+    </nav>
 
 
     <div id="index-banner" class="parallax-container">
@@ -74,6 +74,7 @@
                         <img src="img/foto-arne%20Cropped.jpg" alt="foto van developer Arne Sas" class="circle responsive-img">
                         <h5 class="center">Arne Sas</h5>
                         <p class="light">Arne Sas is al sinds zijn 16 jaar bezig met het maken van website, doorheen deze tijd is het een passie geworden en probeert hij altijd mee te zijn met de laatste nieuwe trends. Van projecten waar er uit de box gedacht moet worden, is hij altijd te vinden.</p>
+                        <p><a href="">Bekijk de website van Arne Sas</a></p>
                     </div>
                 </div>
                 <div class="col s12 m3">
@@ -82,6 +83,7 @@
                         <img src="img/Foto_Arne_Van_Beethoven%20Cropped.jpg" alt="foto van developer Arne Van Beethoven" class="circle responsive-img">
                         <h5 class="center">Arne Van Beethoven</h5>
                         <p class="light">Arne Van Beethoven is een 18 jarige jongen die een passie heeft voor de IT sector. Hij is altijd mee met de nieuwste technologieën. En is ook graag bezig op sportief vlak.</p>
+                        <p><a href="">Bekijk de website van Arne Van Beethoven</a></p>
                     </div>
                 </div>
                 <div class="col s12 m3">
@@ -89,7 +91,7 @@
                         <img src="img/Arneresize.jpg" alt="foto van developer Arne De Cnodder" class="circle responsive-img">
                         <h5 class="center">Arne De Cnodder</h5>
                         <p class="light">Arne De Cnodder is een student die het leren nog niet moe is. In 2019 is hij afgestudeerd aan Thomas More in Vorselaar en heeft hij het diploma leraar secundair onderwijs behaald. Toch koos hij ervoor om zijn passie, programmeren en webdesign, beter onder de knie te krijgen door een opleiding te volgen aan Thomas More in Geel.</p>
-
+                        <p><a href="">Bekijk de website van Arne De Cnodder</a></p>
                     </div>
                 </div>
                 <div class="col s12 m3">
@@ -97,6 +99,7 @@
                         <img src="img/foto_gillian.jpg" alt="foto van developer Gillian Heyns" class="circle responsive-img">
                         <h5 class="center">Gillian Heyns</h5>
                         <p class="light">Gillian Heyns zit in het eerste jaar toegepaste informatica. Hij heeft voordien gewerkt als vrachtwagenchauffeur, tijdens deze periode was hij nog steeds bezig met IT. Computer problemen oplossen is zijn hobby, geen enkel probleem gaat hij uit de weg. Naast zijn IT passie is hij ook actief als scheidsrechter in de provincie Antwerpen.</p>
+                        <p><a href="">Bekijk de website van Gillian Heyns</a></p>
                     </div>
                 </div>
             </div>
@@ -104,7 +107,7 @@
                 <h3 class="center">Ons project voor actie MiN</h3>
                 <h6 class="center">(Klik op de foto om ons eerste project te bekijken)</h6>
                 <div class="actie_min">
-                    <a href=""><img src="img/actie_min_brood.jpg" alt="foto met link naar website MiN" class="responsive-img image"></a>
+                    <a href="../min/index.html"><img src="img/actie_min_brood.jpg" alt="foto met link naar website MiN" class="responsive-img image"></a>
                 </div>
             </div>
 
@@ -132,9 +135,10 @@
                     <h4>Waar kan je ons vinden?</h4>
 
                     <p class="left-align light">We hebben een Twitter pagina waar we tweets plaatsen over en tijdens ons project. Maar ook kan je ons altijd aanspreken in de gangen van Thomas More te Geel.</p>
-                    <iframe class="col s12 col m6"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2502.1743438590697!2d4.959249515962638!3d51.16057514382263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c14c011b4bcb87%3A0xb5b970e9f2a6ce42!2sThomas%20More%20-%20Campus%20Geel!5e0!3m2!1snl!2sbe!4v1579768566095!5m2!1snl!2sbe" width="700" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-                     <a class="twitter-timeline col s12 col m6" data-width="350" data-height="500" href="https://twitter.com/saske7_7?ref_src=twsrc%5Etfw">Tweets by saske7_7</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                    
+                    <iframe class="col s12 col m6" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2502.1743438590697!2d4.959249515962638!3d51.16057514382263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c14c011b4bcb87%3A0xb5b970e9f2a6ce42!2sThomas%20More%20-%20Campus%20Geel!5e0!3m2!1snl!2sbe!4v1579768566095!5m2!1snl!2sbe" width="700" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                    <a class="twitter-timeline col s12 col m6" data-width="350" data-height="500" href="https://twitter.com/saske7_7?ref_src=twsrc%5Etfw">Tweets by saske7_7</a>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 
                 </div>
             </div>
@@ -148,20 +152,6 @@
             <div class="container">
                 <div class="row center">
                     <h5 class="header col s12 light">Wilt u de meest vernieuwende en aansprekende website?</h5>
-                    <div class="container linken">
-                        <p class="col m3">De site van 
-                            <a  href="https://r0784221.sinners.be/">Arne Van Beethoven</a>
-                        </p>
-                        <p class="col m3">De site van 
-                            <a  href="https://r0784221.sinners.be/">Arne Sas</a>
-                        </p>
-                        <p class="col m3">De site van 
-                            <a  href="https://r0784221.sinners.be/">Arne De Cnodder</a>
-                        </p>
-                        <p class="col m3">De site van 
-                            <a  href="https://r0784221.sinners.be/">Gillian Heyns</a>
-                        </p>
-                        </div>
                 </div>
             </div>
         </div>
@@ -170,7 +160,7 @@
 
     <footer class="page-footer">
         <div class="container">
-            <div class="row" id="contact">
+            <div class="row center-align" id="contact">
                 <div class="col l6 s12">
                     <h5 class="white-text">Over ons</h5>
                     <p class="grey-text text-lighten-4">Wij zijn 4 studenten van het eerste jaar uit de IT factory van Thomas More in Geel. Voor ons keuzeproject van App moeten wij een website maken van een webdesign bureau.</p>
@@ -179,7 +169,7 @@
                 </div>
                 <div class="col l3 s12">
                     <h5 class="white-text">Contact</h5>
-                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="https://twitter.com/saske7_7" class="fa fa-twitter"></a>
                 </div>
 
             </div>
@@ -197,4 +187,6 @@
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
 
-</body></html>
+</body>
+
+</html>
