--- a/webbureau/index.html
+++ b/webbureau/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-    <nav class="white" role="navigation">
+    <nav class="white">
         <div class="nav-wrapper container">
             <a id="logo-container" href="#" class="brand-logo">
                 <img id="logo" src="img/logo_gnadesign_klein.svg" alt="logo gna design">
