--- a/min/nl/historiek.html
+++ b/min/nl/historiek.html
@@ -72,10 +72,10 @@
             <!-- Dropdown Trigger -->
             <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
-
+         <h1 class="center bckgrnd" id="historiekbg">Historiek</h1>
         <div class="container">
 
-            <h1 class="center">Historiek</h1>
+           
             <p id="opening" class="para">Op een zomernamiddag in het jaar 1983 werd er gebeld aan de pastorij van Achterbos,
                 bij pastoor Frans, met de mededeling dat er een gezin met 5 kinderen op straat werd
                 gezet door een deurwaarder. Dit voorval zette pastoor Frans aan het denken en hij riep
@@ -121,7 +121,7 @@
                 <p>Voedselbedeling – noodhulp op zaterdag : <br> St Apollonialaan 198 </p>
                 <img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px">
                 <br>
-                <a href="#" class="fa fa-facebook"></a>
+                <a href="https://www.facebook.com/Actie-Min-vzw-114502416757004/" class="fa fa-facebook"></a>
                 <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
 
             </div>
