--- a/min/nl/home.html
+++ b/min/nl/home.html
@@ -72,7 +72,7 @@
             <!-- Dropdown Trigger -->
             <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
-        <h1 class="center" id="homebg">Home</h1>
+        <h1 class="center bckgrnd" id="homebg">Home</h1>
         <div class="container">
             <div class="hulp">
                 <img src="../img/actie_min_broodniethoog.jpg" class="responsive-img" alt="">
@@ -136,7 +136,7 @@
                 <p>Voedselbedeling – noodhulp op zaterdag : <br> St Apollonialaan 198 </p>
                 <img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100" width="200">
                 <br>
-                <a href="#" class="fa fa-facebook"></a>
+                <a href="https://www.facebook.com/Actie-Min-vzw-114502416757004/" class="fa fa-facebook"></a>
                 <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
 
             </div>
