--- a/min/nl/op=op.html
+++ b/min/nl/op=op.html
@@ -67,8 +67,9 @@
         <!-- Dropdown Trigger -->
         <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
     </ul>
+    <h1 class="center bckgrnd" id="opisopbg">OP=OP</h1>
     <div class="container txt">
-        <h1 class="center">OP=OP</h1>
+        
         <div class="row">
             <div class="col s12 m6">
                 <div class="para">
@@ -85,7 +86,7 @@
 
             </div>
             <div class="col s12 m6 hide-on-small-and-down">
-                <img src="../img/voedsebedeling.jpg" alt="foto van voedselbedeling" class="responsive-img">
+                <img src="../img/voedsebedeling.jpg" alt="foto van voedselbedeling" class="responsive-img" id="opisop">
             </div>
         </div>
         <div class="para offset-s3">
@@ -161,7 +162,7 @@
                 <p>Voedselbedeling – noodhulp op zaterdag : <br> St Apollonialaan 198 </p>
                 <img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100" width="200">
                 <br>
-                <a href="#" class="fa fa-facebook"></a>
+                <a href="https://www.facebook.com/Actie-Min-vzw-114502416757004/" class="fa fa-facebook"></a>
                 <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
 
             </div>
