--- a/min/nl/partners_armoedebeleid.html
+++ b/min/nl/partners_armoedebeleid.html
@@ -72,9 +72,9 @@
             <!-- Dropdown Trigger -->
             <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
-
+      <h1 class="center bckgrnd" id="armoedebeleidbg">Onze partners in armoedebeleid</h1>
         <div class="container">
-            <h1 class="center">Onze partners in armoedebeleid</h1>
+          
 
             <div class="row">
                 <div class="col s12 l6">
@@ -121,7 +121,7 @@
                 <a href="https://welzijnsschakels.be/"><img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px"></a>
 
                 <br>
-                <a href="#" class="fa fa-facebook"></a>
+                <a href="https://www.facebook.com/Actie-Min-vzw-114502416757004/" class="fa fa-facebook"></a>
                 <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
 
             </div>
