--- a/webbureau/index.html
+++ b/webbureau/index.html
@@ -153,13 +153,13 @@
                             <a  href="https://r0784221.sinners.be/">Arne Van Beethoven</a>
                         </p>
                         <p class="col m3">De site van 
-                            <a  href="https://r0784221.sinners.be/">Arne Sas</a>
+                            <a  href="http://www.theatticofficialband.site/webdesign/skills3/r0802226skills3.html">Arne Sas</a>
                         </p>
                         <p class="col m3">De site van 
-                            <a  href="https://r0784221.sinners.be/">Arne De Cnodder</a>
+                            <a  href="https://arnedc.sinners.be">Arne De Cnodder</a>
                         </p>
                         <p class="col m3">De site van 
-                            <a  href="https://r0784221.sinners.be/">Gillian Heyns</a>
+                            <a  href="https://r0450988.sinners.be">Gillian Heyns</a>
                         </p>
                         </div>
                 </div>
