--- a/min/nl/ookdoneren.html
+++ b/min/nl/ookdoneren.html
@@ -72,10 +72,10 @@
             <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
 
-
+            <h1 class="center bckgrnd" id="donerenbg">Ook doneren?</h1>
         <div class="container">
 
-            <h1 class="center">Ook doneren?</h1>
+
             <p class="para">Wilt u voedsel zoals, fruit, groenten, zuivel en andere nog houdbare artikelen schenken
                 aan Actie MIN? Neemt gerust contact op via mail : <a href="mailto:actiemenseninnood@gmail.com">actiemenseninnood@gmail.com</a> of
                 telefonisch via : 0473 24 13 61</p>
@@ -137,7 +137,7 @@
                 <p>Voedselbedeling – noodhulp op zaterdag : <br> St Apollonialaan 198 </p>
                 <img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px">
                 <br>
-                <a href="#" class="fa fa-facebook"></a>
+                <a href="https://www.facebook.com/Actie-Min-vzw-114502416757004/" class="fa fa-facebook"></a>
                 <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
 
             </div>
