--- a/min/nl/sponsors.html
+++ b/min/nl/sponsors.html
@@ -72,10 +72,10 @@
         <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Taal<i class="material-icons right">arrow_drop_down</i></a></li>
     </ul>
 
-
+     <h1 class="center bckgrnd" id="sponsorsbg">Sponsors</h1>
 
     <div class="container txt">
-        <h1 class="center">Sponsors</h1>
+       
         <p>Sponsors van formaat zijn alle mensen die ons financieel ondersteunen door hun maandelijkse bijdragen te storten op onze rekening.<br>Door deze bijdragen kan onze vereniging blijven bestaan en mensen in armoede ondersteunen.</p>
         <p>Hieronder de vermelding van de bedrijven of firma's die ons ondersteunen met gratis voedsel te leveren:</p>
         <hr>
@@ -249,7 +249,7 @@
                 <p>Voedselbedeling – noodhulp op zaterdag : <br> St Apollonialaan 198 </p>
                 <img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100" width="200">
                 <br>
-                <a href="#" class="fa fa-facebook"></a>
+                <a href="https://www.facebook.com/Actie-Min-vzw-114502416757004/" class="fa fa-facebook"></a>
                 <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
 
             </div>
