video toevoegen in op=op

--- a/min/nl/activiteiten.html
+++ b/min/nl/activiteiten.html
@@ -82,6 +82,10 @@
                         <h4 class="center">Leo’s Club</h4>
                         <p>onze doelgroep kreeg twee jaar geleden de kans om naar de Olmse Zoo de bezoeken. Een maaltijd en drankje was inclusief. Een fijne namiddag voor jong en oud, waar iedereen in volle teugen van genoten heeft. In 2019 konden we met een ganse bus naar Bellewaerde. Iedereen kreeg voldoende drankbonnetjes en een maaltijd aangeboden. Voor onze kinderen een superdag!</p>
                     </div>
+                    
+                    <div class="row">
+
+                    
 <a href="#"><img id="naarboven" src="../img/backtotop.png" alt="Naar boven" width="50px" height="50px"></a>
                 </div>
 
