Back to top gefixt en layout footer

--- a/min/nl/home.html
+++ b/min/nl/home.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+    <div><a href="#"><img src="../img/backtotop.png" class="img-responsive totop" alt="terug naar boven knop"></a></div>
     <nav class="ccakleur">
         <div class="nav-wrapper">
             <a href="#!" class="brand-logo"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
@@ -51,10 +52,10 @@
         <h1 class="center" id="homebg">Home</h1>
         <div class="container">
             <div class="hulp">
-                <img src="../img/actie_min_broodniethoog.jpg" class="responsive-img" alt="">
-                <div>
-                    <div class="centered" id="knop">
-                        <h4><a href="">Hulp nodig?</a></h4>
+                <img src="../img/actie_min_broodniethoog.jpg" class="responsive-img hide-on-small-only" alt="">
+                <div id="knop" class="centered">
+                    <div class="effect">
+                        <h4><a href="op=op.html">Hulp nodig?</a></h4>
                     </div>
                 </div>
             </div>
@@ -83,7 +84,6 @@
                     <h4 class="center">Hoe gaan we te werk</h4>
                     <p>Actie MIN is best te vergelijken met de spoeddienst in het ziekenhuis. De mensen die totaal verdwaald zijn in de mallemolen vanhet leven en zich even niet alleen meer kunnen redden, zijn bij ons welkom voor hulp. Na de eerste zorgen gaan we samen met hen bekijken wat de volgende stappen kunnen zijn naar het herstel van hun situatie. Dan verwijzen we naarandere organisaties zoalshet OCMW, CAW of JAC of zoeken naarandere mogelijkheden om uit het dal te geraken.</p>
                 </div>
-                <a href="#"><img id="naarboven" src="../img/backtotop.png" alt="Naar boven" width="50px" height="50px"></a>
             </div>
         </div>
     </div>
@@ -111,13 +111,17 @@
                     2400 Mol</p>
                 <hr>
                 <p>Voedselbedeling – noodhulp op zaterdag : <br> St Apollonialaan 198 </p>
-
-                   <a href="https://welzijnsschakels.be/"><img src="../img/Welzijnsschakel_transparant.png" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px"></a>
-
-                <img src="../img/welzijnsschakel.jpg" alt="welzijnsschakel logo" class="responsive-img" height="100" width="200">
-                <br>
-                <a href="#" class="fa fa-facebook"></a>
-                <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
+                <div class="row linkenfoot">
+                    <div class="col s12 m4">
+                        <a href="https://welzijnsschakels.be/"><img src="../img/Welzijnsschakel_transparant.png" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px"></a>
+                    </div>
+                    <div class="col s12 m4 ">
+                        <a href="#" class="fa fa-facebook"></a>
+                    </div>
+                    <div class="col s12 m4">
+                        <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
+                    </div>
+                </div>
 
             </div>
             <div class="col s12 l4 maps">
@@ -128,13 +132,18 @@
 
             </div>
         </div>
+        <ul class="row taalfoot">
+            <li class="col s12 m3"><a href="">English</a></li>
+            <li class="col s12 m3"><a href="">Français</a></li>
+            <li class="col s12 m3"><a href="">Espanol</a></li>
+            <li class="col s12 m3"><a href="">русский</a></li>
+        </ul>
         <div class="footer-copyright">
             <div class="">
                 <p class="center"> Keuzeproject 1ITF@ <a href="https://www.thomasmore.be">Thomas More</a> – prototype ontwikkeld door: GNA design</p>
 
             </div>
         </div>
-
     </footer>
     <!--JavaScript at end of body for optimized loading-->
 
