--- a/webbureau/index.html
+++ b/webbureau/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html;charset="utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>GNA design</title>
 
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
-    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen" />
+    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <meta name="author" content="Arne Sas, Arne Van Beethoven, Arne De Cnodder, Gillian Heyns">
     <meta name="description" content="Welkom bij GNA design! Wij zijn 4 studenten uit het eerste jaar van de IT-factory van Thomas More in Geel. Voor ons keuzeproject van App moeten wij een website maken van een webdesign bureau.">
@@ -74,7 +74,7 @@
                         <img src="img/foto-arne%20Cropped.jpg" alt="foto van developer Arne Sas" class="circle responsive-img">
                         <h5 class="center">Arne Sas</h5>
                         <p class="light">Arne Sas is al sinds zijn 16 jaar bezig met het maken van website, doorheen deze tijd is het een passie geworden en probeert hij altijd mee te zijn met de laatste nieuwe trends. Van projecten waar er uit de box gedacht moet worden, is hij altijd te vinden.</p>
-                        <p><a href="">Bekijk de website van Arne Sas</a></p>
+                        <p><a href="http://www.theatticofficialband.site/webdesign/skills3/r0802226skills3.html">Bekijk de website van Arne Sas</a></p>
                     </div>
                 </div>
                 <div class="col s12 m3">
@@ -83,7 +83,7 @@
                         <img src="img/Foto_Arne_Van_Beethoven%20Cropped.jpg" alt="foto van developer Arne Van Beethoven" class="circle responsive-img">
                         <h5 class="center">Arne Van Beethoven</h5>
                         <p class="light">Arne Van Beethoven is een 18 jarige jongen die een passie heeft voor de IT sector. Hij is altijd mee met de nieuwste technologieën. En is ook graag bezig op sportief vlak.</p>
-                        <p><a href="">Bekijk de website van Arne Van Beethoven</a></p>
+                        <p><a href="https://r0784221.sinners.be">Bekijk de website van Arne Van Beethoven</a></p>
                     </div>
                 </div>
                 <div class="col s12 m3">
@@ -91,7 +91,7 @@
                         <img src="img/Arneresize.jpg" alt="foto van developer Arne De Cnodder" class="circle responsive-img">
                         <h5 class="center">Arne De Cnodder</h5>
                         <p class="light">Arne De Cnodder is een student die het leren nog niet moe is. In 2019 is hij afgestudeerd aan Thomas More in Vorselaar en heeft hij het diploma leraar secundair onderwijs behaald. Toch koos hij ervoor om zijn passie, programmeren en webdesign, beter onder de knie te krijgen door een opleiding te volgen aan Thomas More in Geel.</p>
-                        <p><a href="">Bekijk de website van Arne De Cnodder</a></p>
+                        <p><a href="https://arnedc.sinners.be">Bekijk de website van Arne De Cnodder</a></p>
                     </div>
                 </div>
                 <div class="col s12 m3">
@@ -99,7 +99,7 @@
                         <img src="img/foto_gillian.jpg" alt="foto van developer Gillian Heyns" class="circle responsive-img">
                         <h5 class="center">Gillian Heyns</h5>
                         <p class="light">Gillian Heyns zit in het eerste jaar toegepaste informatica. Hij heeft voordien gewerkt als vrachtwagenchauffeur, tijdens deze periode was hij nog steeds bezig met IT. Computer problemen oplossen is zijn hobby, geen enkel probleem gaat hij uit de weg. Naast zijn IT passie is hij ook actief als scheidsrechter in de provincie Antwerpen.</p>
-                        <p><a href="">Bekijk de website van Gillian Heyns</a></p>
+                        <p><a href="https://r0450988.sinners.be">Bekijk de website van Gillian Heyns</a></p>
                     </div>
                 </div>
             </div>
