link gna design

--- a/min/nl/activiteiten.html
+++ b/min/nl/activiteiten.html
@@ -156,7 +156,7 @@
         </ul>
         <div class="footer-copyright">
             <div class="">
-                <p class="center"> Keuzeproject 1ITF@ <a href="https://www.thomasmore.be">Thomas More</a> – prototype ontwikkeld door: GNA design</p>
+                <p class="center"> Keuzeproject 1ITF@ <a href="https://www.thomasmore.be">Thomas More</a> – prototype ontwikkeld door: <a href="../../webbureau/index.html">GNA design</a></p>
 
             </div>
         </div>
