--- a/min/nl/historiek.html
+++ b/min/nl/historiek.html
@@ -100,7 +100,7 @@
                         <a href="https://welzijnsschakels.be/"><img src="../img/Welzijnsschakel_transparant.png" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px"></a>
                     </div>
                     <div class="col s12 m4 ">
-                        <a href="#" class="fa fa-facebook"></a>
+                        <a href="https://www.facebook.com/Actie-Min-vzw-114502416757004/" class="fa fa-facebook"></a>
                     </div>
                     <div class="col s12 m4">
                         <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
