icons en link logo

--- a/min/nl/activiteiten.html
+++ b/min/nl/activiteiten.html
@@ -101,14 +101,23 @@
             <div class="col s12 l4">
                 <h4>Contactgegevens </h4>
 
-                <p>Algemene info/nieuwe aanvragen <br> Gsm: 0473 /24 13 61 </p>
+                <p>Algemene info/nieuwe aanvragen <br> <i class="material-icons">
+                        phone
+                    </i> 0473 /24 13 61 </p>
                 <hr>
-                <p>Kleding/huisraad/speelgoed <br> Gsm: 0468/58 51 39</p>
+                <p>Kleding/huisraad/speelgoed <br>
+                    <i class="material-icons">
+                        phone
+                    </i> 0468/58 51 39</p>
                 <hr>
-                <p>Email: <a href="mailto: actiemenseninood@gmail.com">actiemenseninood@gmail.com</a></p>
+                <p><i class="material-icons">
+                        email
+                    </i> <a href="mailto: actiemenseninood@gmail.com">actiemenseninood@gmail.com</a></p>
                 <hr>
                 <p>Bankrekening <br>
-                    BE29 7512 0621 4764 <br>
+                    <i class="material-icons">
+                        account_balance
+                    </i>BE29 7512 0621 4764 <br>
                     BIC: AXABBE22 <br>
                     Ondernemingsnummer : 0639.984.323
                 </p>
