--- a/min/nl/sponsors.html
+++ b/min/nl/sponsors.html
@@ -22,7 +22,7 @@
     <div><a href="#"><img src="../img/backtotop.png" class="img-responsive totop" alt="terug naar boven knop"></a></div>
     <nav class="ccakleur">
         <div class="nav-wrapper">
-            <a href="#!" class="brand-logo"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
+            <a href="../nl/home.html" class="brand-logo"><img id="logo" src="../img/logo_min_klein.svg" alt="logo min"></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="home.html">Home</a></li>
@@ -205,14 +205,23 @@
             <div class="col s12 l4">
                 <h4>Contactgegevens </h4>
 
-                <p>Algemene info/nieuwe aanvragen <br> Gsm: 0473 /24 13 61 </p>
+                <p>Algemene info/nieuwe aanvragen <br> <i class="material-icons">
+                        phone
+                    </i> 0473 /24 13 61 </p>
                 <hr>
-                <p>Kleding/huisraad/speelgoed <br> Gsm: 0468/58 51 39</p>
+                <p>Kleding/huisraad/speelgoed <br>
+                    <i class="material-icons">
+                        phone
+                    </i> 0468/58 51 39</p>
                 <hr>
-                <p>Email: <a href="mailto: actiemenseninood@gmail.com">actiemenseninood@gmail.com</a></p>
+                <p><i class="material-icons">
+                        email
+                    </i> <a href="mailto: actiemenseninood@gmail.com">actiemenseninood@gmail.com</a></p>
                 <hr>
                 <p>Bankrekening <br>
-                    BE29 7512 0621 4764 <br>
+                    <i class="material-icons">
+                        account_balance
+                    </i>BE29 7512 0621 4764 <br>
                     BIC: AXABBE22 <br>
                     Ondernemingsnummer : 0639.984.323
                 </p>
