--- a/min/nl/partners_armoedebeleid.html
+++ b/min/nl/partners_armoedebeleid.html
@@ -65,7 +65,7 @@
                         vierdewereldwerking-mol@skynet.be</p>
                 </div>
                 <div class="col s12 l6">
-                    <img src="../img/vzwmenseninnood.jpg" alt="logo vzw mensen in nood" width="400px" height="200px" class="responsive-img">
+                    <img src="../img/vzwmenseninnood.jpg" alt="logo vzw mensen in nood" width="400" height="200" class="responsive-img">
                 </div>
             </div>
 
